codex-rs/tui/src/snapshots/codex_tui__external_agent_config_migration__tests__external_agent_config_migration_prompt_windows.snap
---
source: tui/src/external_agent_config_migration.rs
expression: rendered
---

  > Import from Claude Code
  Bring over your setup, current project, and recent chats.
  Motyga may add files to your current project folder.
  Your existing Claude Code setup will not be changed.
  Standard Claude Chat data cannot be imported.
    [x] Tools & setup
        Settings, instructions, integrations, agents, commands, and skills
        Importing: Settings 1
    [x] Current project
        Add Motyga files alongside your existing project files
        Importing: Plugins 6, Instructions 1
    [x] Chat sessions (1)
        Last 30 days of chats
        Importing: Chat sessions 1

  Selected 4 of 4 items.
  › 1. Import selected
    2. Customize selection
    3. Cancel
  Use ↑/↓ to move, enter to select, c to customize
